--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
   
-  <title> My projects: </title>
+  <span> My projects: </span>
   
   <span> DressApp: https://azolinmf.github.io/dressApp/ </span>
 
