--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   <span> DressApp: https://azolinmf.github.io/dressApp/ </span>
   
   <span> GuessWhat: https://azolinmf.github.io/guessWhat/ </span>
+  
+  <span> Twitter Bot: https://azolinmf.github.io/twitterBot/ </span>
+  
+  <span> Festa Surpresa: https://azolinmf.github.io/festaSurpresa/ </span>
 
 </html>
