--- a/festaSurpresa/privacy.html
+++ b/festaSurpresa/privacy.html
@@ -4,7 +4,7 @@
 	<title>Privacy Police</title>
 </head>
 <body>
-	Letícia Pulner, Matheus Cavasin, Mateus Nunes and Maria fernanda Azolin built the Festa Surpresa app as a Free app.
+	Letícia Pulner, Matheus Cavasin, Mateus Nunes, Maria fernanda Azolin and Pedro Vargas built the Festa Surpresa app as a Free app.
   We do not store or share your data.
 </body>
 </html>
