--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   
   <span> My projects: </span>
   
-  <span> DressApp: https://azolinmf.github.io/dressApp/ </span>
+  <span> DressApp: https://apps.apple.com/br/app/dressapp-your-looks/id1465169852 </span>
   
-  <span> GuessWhat: https://azolinmf.github.io/guessWhat/ </span>
+  <span> Bunny Jumpy: https://apps.apple.com/br/app/bunny-jumpy-infinity-jump/id1502411866 </span>
   
-  <span> Twitter Bot: https://azolinmf.github.io/twitterBot/ </span>
+  <span> GuessWhat: https://apps.apple.com/br/app/guesswhat-time-to-mime/id1469934482 </span>
   
-  <span> Festa Surpresa: https://azolinmf.github.io/festaSurpresa/ </span>
+  <span> Festa Surpresa: https://apps.apple.com/br/app/festa-surpresa/id1491190813 </span>
 
 </html>
