--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
   
   <span> My projects: </span>
   <br> 
+  <br> 
   
-  <span> DressApp: https://apps.apple.com/br/app/dressapp-your-looks/id1465169852 </span>
+  <a href="https://apps.apple.com/br/app/dressapp-your-looks/id1465169852">DressApp</a>
+  <br> 
   
   <span> Bunny Jumpy: https://apps.apple.com/br/app/bunny-jumpy-infinity-jump/id1502411866 </span>
+  <br> 
   
   <span> GuessWhat: https://apps.apple.com/br/app/guesswhat-time-to-mime/id1469934482 </span>
+  <br> 
   
   <span> Festa Surpresa: https://apps.apple.com/br/app/festa-surpresa/id1491190813 </span>
+  <br> 
 
 </html>
