--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <a href="https://apps.apple.com/br/app/dressapp-your-looks/id1465169852">DressApp</a>
   <br> 
   
-  <span> Bunny Jumpy: https://apps.apple.com/br/app/bunny-jumpy-infinity-jump/id1502411866 </span>
+  <a href="https://apps.apple.com/br/app/bunny-jumpy-infinity-jump/id1502411866">Bunny Jumpy</a>
   <br> 
   
-  <span> GuessWhat: https://apps.apple.com/br/app/guesswhat-time-to-mime/id1469934482 </span>
+  <a href="https://apps.apple.com/br/app/guesswhat-time-to-mime/id1469934482">GuessWhat</a>
   <br> 
   
-  <span> Festa Surpresa: https://apps.apple.com/br/app/festa-surpresa/id1491190813 </span>
+  <a href="https://apps.apple.com/br/app/festa-surpresa/id1491190813">Festa Surpresa</a>
   <br> 
 
 </html>
