--- a/searchAlgorithms/privacy.html
+++ b/searchAlgorithms/privacy.html
@@ -5,7 +5,7 @@
 	<title>Privacy Police</title>
 </head>
 <body>
-	Maria Fernanda Azolin and Mariana Abad built the Bunny Jumpy app as a Free app. This SERVICE is provided by Maria Fernanda Azolin and Mariana Abad at no cost and is intended for use as is.
-  We do not store or share your data
+	Maria Fernanda Azolin built the Search Algorithms app as a free app. This SERVICE is provided by Maria Fernanda Azolin at no cost and is intended for use as is.
+  We do not store or share your data.
 </body>
 </html>
