--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
   
   <a href="https://apps.apple.com/br/app/festa-surpresa/id1491190813">Festa Surpresa</a>
   <br> 
+  
+  <a href="https://azolinmf.github.io/searchAlgorithms/">Search Algorithms</a>
+  <br> 
 
 </html>
