--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="https://apps.apple.com/br/app/festa-surpresa/id1491190813">Festa Surpresa</a>
   <br> 
   
-  <a href="https://azolinmf.github.io/searchAlgorithms/">Search Algorithms</a>
+  <a href="https://apps.apple.com/br/app/search-algorithms/id1516051454?l=en">Search Algorithms</a>
   <br> 
 
 </html>
