--- a/searchAlgorithms/index.html
+++ b/searchAlgorithms/index.html
@@ -1,2 +1,7 @@
 <!DOCTYPE html>
-<html> Search Algorithms </html>
+<html>
+
+  <a href="https://apps.apple.com/br/app/search-algorithms/id1516051454?l=en">Search Algorithms</a>
+  <br> 
+  
+ </html>
