--- a/dressApp/index.html
+++ b/dressApp/index.html
@@ -6,11 +6,15 @@
   <a href="https://apps.apple.com/br/app/dressapp-your-looks/id1465169852">DressApp</a>
   <br> 
   
-  <br>    
+  <br> 
+  <span> See the privacy policy: </span>
+  <br> 
   <a href="https://azolinmf.github.io/dressApp/privacy">Privacy police</a>
   <br> 
   
-  <br>    
+  <br>
+  <span> Contact the support </span>
+  <br> 
   <a href="https://azolinmf.github.io/dressApp/support">Support</a>
   <br> 
 
