--- a/dressApp/index.html
+++ b/dressApp/index.html
@@ -13,7 +13,7 @@
   <br> 
   
   <br>
-  <span> Contact the support </span>
+  <span> Contact the support: </span>
   <br> 
   <a href="https://azolinmf.github.io/dressApp/support">Support</a>
   <br> 
