--- a/dressApp/index.html
+++ b/dressApp/index.html
@@ -9,7 +9,7 @@
   <br> 
   <span> See the privacy policy: </span>
   <br> 
-  <a href="https://azolinmf.github.io/dressApp/privacy">Privacy police</a>
+  <a href="https://azolinmf.github.io/dressApp/privacy">Privacy policy</a>
   <br> 
   
   <br>
