--- a/BunnyJumpy/index.html
+++ b/BunnyJumpy/index.html
@@ -1,2 +1,22 @@
+
 <!DOCTYPE html>
-<html> BunnyJumpy </html>
+<html> 
+
+  <span> Download on app store: </span>
+  <br>    
+  <a href="https://apps.apple.com/br/app/bunny-jumpy-infinity-jump/id1502411866">Buuny Jumpy</a>
+  <br> 
+  
+  <br> 
+  <span> See the privacy policy: </span>
+  <br> 
+  <a href="https://azolinmf.github.io/BunnyJumpy/privacy">Privacy policy</a>
+  <br> 
+  
+  <br>
+  <span> Contact the support: </span>
+  <br> 
+  <a href="https://azolinmf.github.io/BunnyJumpy/support">Support</a>
+  <br> 
+
+</html>
