--- a/guessWhat/index.html
+++ b/guessWhat/index.html
@@ -1,2 +1,20 @@
 <!DOCTYPE html>
-<html> GuessWhat </html>
+  <html> 
+
+  <span> Download on app store: </span>
+  <br>    
+  <a href="https://apps.apple.com/br/app/guesswhat-time-to-mime/id1469934482">Guess What: time to mime</a>
+  <br> 
+  <br> 
+  <span> See the privacy policy: </span>
+  <br> 
+  <a href="https://azolinmf.github.io/guessWhat/privacy">Privacy policy</a>
+  <br> 
+  
+  <br>
+  <span> Contact the support: </span>
+  <br> 
+  <a href="https://azolinmf.github.io/guessWhat/support">Support</a>
+  <br> 
+    
+  </html>
