first commit wedding website

--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-
-<html> 
-  
-  <span> My projects: </span>
-  <br> 
-  <br> 
-  
-  <a href="https://apps.apple.com/br/app/dressapp-your-looks/id1465169852">DressApp</a>
-  <br> 
-  
-  <a href="https://apps.apple.com/br/app/bunny-jumpy-infinity-jump/id1502411866">Bunny Jumpy</a>
-  <br> 
-  
-  <a href="https://apps.apple.com/br/app/guesswhat-time-to-mime/id1469934482">GuessWhat</a>
-  <br> 
-  
-  <a href="https://apps.apple.com/br/app/festa-surpresa/id1491190813">Festa Surpresa</a>
-  <br> 
-  
-  <a href="https://apps.apple.com/br/app/search-algorithms/id1516051454?l=en">Search Algorithms</a>
-  <br> 
-  
-  <a href="https://testflight.apple.com/join/7B2osFZg">Ninho</a>
-  <br> 
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/ring.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/ring.png"/><link rel="manifest" href="/manifest.json"/><title>Mafê e Nikolai</title><script defer="defer" src="/static/js/main.0d7d1c91.js"></script><link href="/static/css/main.d9b54d76.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
