--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="apple-touch-icon" href="/ring.png"/>
         <link rel="manifest" href="/manifest.json"/>
         <title>Mafê & Nikolai</title>
-        <script defer="defer" src="/static/js/main.5ff9a3b0.js"></script>
-        <link href="/static/css/main.47480c2b.css" rel="stylesheet">
+        <script defer="defer" src="/static/js/main.4bef9558.js"></script>
+        <link href="/static/css/main.679c998c.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </head>
 <body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
