--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <title>Mafê & Nikolai</title>
         <script defer="defer" src="/static/js/main.4bef9558.js"></script>
         <link href="/static/css/main.679c998c.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 <body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
